Naar NominatimAPI versie 2